--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
   h2,
   h3,
   h4 {
-    @apply font-bold;
+    @apply font-bold capitalize;
   }
   h1 {
     @apply text-4xl;
@@ -31,6 +31,17 @@
     @apply text-sm text-white;
   }
 
+  form {
+    @apply rounded-xl p-4;
+  }
+  label {
+    @apply mt-3 capitalize;
+  }
+  input,
+  select,
+  textarea {
+    @apply m-1 rounded bg-slate-700 p-1;
+  }
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
